--- a/estilo/style.css
+++ b/estilo/style.css
@@ -21,7 +21,7 @@ body {
 
 main {
     position: relative;
-    height: 100vw;
+    height: 150vw;
     
 }
 
@@ -43,6 +43,21 @@ iframe#tela {
     left: 22px;
     width: 267px;
     height: 471px;
+}
+section#redes-sociais img {
+        width: 50px;
+        margin: 10px;
+        border-radius: 50%;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.456);
+        box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.581) ;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.626);
+    transition: transform .3s;
+
 }
     
     
