--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-    height: 200vw;
+    height: 210vw;
     background-color: black;
 }
 
@@ -21,7 +21,7 @@ body {
 
 main {
     position: relative;
-    height: 170vw;
+    height: 200vw;
     
 }
 
@@ -35,6 +35,7 @@ section#telefone {
     width: 311px;
     background-color: brown;
     background: url(../imagens/frame-iphone.png) no-repeat;
+    margin: 10px;
 }
 
 iframe#tela {
